<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textViewMainActivityUserTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="131dp"
        android:text="@string/my_tasks"
        android:textColor="@color/darkest_pink"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMainActivityAddTask"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:onClick="addTaskButton"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMainActivityAllTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonMainActivityAllTasks" />

    <Button
        android:id="@+id/buttonMainActivityAllTasks"
        android:layout_width="164dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/all_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonMainActivityToSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="settingsButton"
        android:text="@string/settings_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAllTasksActivityTaskRecyclerView"
        android:layout_width="0dp"
        android:layout_height="213dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainActivityUserTeam" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMainActivityUserTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textColor="@color/darkest_pink"
        app:layout_constraintStart_toStartOf="@+id/textViewMainActivityUserTasks"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainActivityUserTasks" />

    <Button
        android:id="@+id/buttonMainActivitySignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:text="Sign Up"
        app:layout_constraintEnd_toStartOf="@+id/buttonMainActivityToSettings"
        app:layout_constraintStart_toEndOf="@+id/buttonMainActivityLogIn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMainActivityLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:text="Log In"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMainActivityLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:text="Log Out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMainActivityToSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>