<resources>
    <string name="app_name">TaskMaster</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="edit_task_title">Enter a title</string>
    <string name="edit_task_description">Enter a description</string>
    <string name="submit_button">Submit</string>
    <string name="alert_submitted">Submitted!</string>
    <string name="change_username_hint">Enter new username</string>
    <string name="change_username_button">Submit</string>
    <string name="settings_label">Settings</string>

</resources>