...
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/darkest_pink"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskDetailTitle" />

    <TextView
        android:id="@+id/textViewTaskDetailLocation"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
...
